# DA-exam-3c1s-AKhmetov-Gaifullin

./: .gitignore  README.md  app.py  clustering_methods_credit_card.ipynb  pyproject.toml  requirements.txt
